--- a/skinnytie.html
+++ b/skinnytie.html
@@ -9,13 +9,15 @@
 <body class="PAGEBODY">
 
  <div class="header_div">
-	<span class="header_span1">ahsjjdhkf</span>
-    <span class="header_span">ahsjjdhkf</span> 
-    <span class="header_span">ahsjjdhkf</span> 
-    <span class="header_span">ahsjjdhkf</span> 
-    <span class="header_span">ahsjjdhkf</span> 
+	<span class="header_span1">FREE SHIPPING!</span>
+    <span class="header_span">Plus Spring Saving:</span> 
+    <span class="header_span">$10 off $50 order!</span> 
+    <span class="header_span">$20 off $100 order!</span> 
+    <span class="header_span">$30 off $150 order!</span> 
 
  </div>
-
+ <div class="mainnavbar">
+ 	alskdjfhdlkjfasd
+ </div>
 </body>
 </html>
