--- a/skinnytie.html
+++ b/skinnytie.html
@@ -14,10 +14,74 @@
     <span class="header_span">$10 off $50 order!</span> 
     <span class="header_span">$20 off $100 order!</span> 
     <span class="header_span">$30 off $150 order!</span> 
+</div>
+
+<!-- Main Navbar container div
+ -->
+  <div class="mainnavbar">
+<!--  	Logo first layer
+ -->
+
+<!--  beginning of floated elements- floated in backward order from their placement in the navbar
+ -->
+ <div class="search-cart_div">
+
+    <div class="navbar_signin_searchbar">
+       <span class="navbar_signin_register_text">
+        SIGN IN  REGISTER</span>
+	
+	   <div class="navbar_searchbar">
+		searchbar button</div>   
+	</div>
+	
+	<div class="navbar_shoppingcart"> Shopping cart here
+	</div>
+
+</div>
+
+     <div class="skinnytielogo"> 
+     skinny ties logo here
+ 	</div>
+ <span class="navbutton_pattern">
+ 	Pattern
+ </span>
+
+  <span class="navbuttons">
+ 	Fabric
+ </span>
+
+ <span class="navbuttons">
+ 	Width
+ </span>
+
+ <span class="navbuttons">
+ 	 Color
+ </span>
+
+ <span class="navbuttons">
+ 	 Collection
+ </span>
+
+
+
+
+
+
+
 
  </div>
- <div class="mainnavbar">
- 	alskdjfhdlkjfasd
- </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
