Began working on the structure that containes the bow-ties, pocket-squares and tie-bar elements

--- a/skinnytie.html
+++ b/skinnytie.html
@@ -42,36 +42,62 @@
      <div class="skinnytielogo"> 
      skinny ties logo here
  	</div>
- <span class="navbutton_pattern">
+    <span class="navbutton_pattern">
  	Pattern
- </span>
+    </span>
 
-  <span class="navbuttons">
+    <span class="navbuttons">
  	Fabric
- </span>
+    </span>
 
- <span class="navbuttons">
+    <span class="navbuttons">
  	Width
- </span>
+    </span>
 
- <span class="navbuttons">
+    <span class="navbuttons">
  	 Color
- </span>
+    </span>
 
- <span class="navbuttons">
+    <span class="navbuttons">
  	 Collection
- </span>
+    </span>
+</div>
 
+<div class="tiebar_display_div">
+    <div class="tiestyle_img_div">
+	
 
+	    <img class="tiebar_tie_img" src="http://placecage.com/75/169">
+	    <img class="tiebar_tie_img" src="http://placecage.com/75/169">
+	    <img class="tiebar_tie_img" src="http://placecage.com/75/169">
+	    <img class="tiebar_tie_img" src="http://placecage.com/75/169">
+        </div>
+ 
+    <div class="startdressingbetter_div">
+	     Start Dressing Better
+	     </div>
+</div>
 
+<div class="bow_squares_bars_div">
 
+    <div class="bowties_div">
+<!-- 	    <img class="tiebar_tie_img" src="http://placecage.com/75/169">
+ -->    <div class="bow_ties_text">BOW TIES</div>
+    </div>
 
+    <div class="pocketsquares_div">
+	<!-- 	    <img class="tiebar_tie_img" src="http://placecage.com/75/169">
+ -->   
+	    <div class="pocket_squares_text">Pocket squares</div>
+    </div>	
 
+    <div class="tiebars_div">
+	<!-- 	    <img class="tiebar_tie_img" src="http://placecage.com/75/169">
+ -->   
+	    <div class="tie_bars_text"> Tie bars</div>
+    </div>	
 
-
- </div>
-
-
+</div>
 
 
 
