Finished adding main structure holding the view-our-history section

--- a/skinnytie.html
+++ b/skinnytie.html
@@ -96,9 +96,20 @@
  -->   
 	    <div class="tie_bars_text"> Tie bars</div>
     </div>	
-
 </div>
 
+<div class="view_our_history_div">
+
+    <div class="we_started_1971">We started in 1971 go fuck yourself</div>
+
+    <div class="our_story">
+    	<a href="http://www.space.com/32964-china-moon-far-side-mission-science-goals.html">View our story</a>
+    </div>
+
+
+
+
+</div>
 
 
 
