Added the structure of the pre-footer navbar and all of its components

--- a/skinnytie.html
+++ b/skinnytie.html
@@ -98,6 +98,10 @@
     </div>	
 </div>
 
+
+
+
+
 <div class="view_our_history_div">
 
     <div class="we_started_1971">We started in 1971 go fuck yourself</div>
@@ -105,9 +109,30 @@
     <div class="our_story">
     	<a href="http://www.space.com/32964-china-moon-far-side-mission-science-goals.html">View our story</a>
     </div>
+</div>
+
+
+<div class="weekly_pick_div">
+	
+	<span class="weekly_pick_text">WEEKLY PICK</span>
+	<div class="weekly_pick_img_div">
+			    <img class="weekly_pick_img" src="http://placecage.com/75/75"></div>
+    <div class="weekly_pick_link">
+    	        <a href="http://www.space.com/32964-china-moon-far-side-mission-science-goals.html">View our story </a>
+    </div>
+
+</div>
 
 
 
+
+
+
+<div class="loop_us_in_div">
+	
+	<span class="loop_us_in_text">LOOP US IN</span>
+	<div class="loop_us_in_content">smallertext paragraph</div>
+    <div class="loop_us_in_sprites"> </div>
 
 </div>
 
@@ -117,7 +142,17 @@
 
 
 
+<div class="the_quarterly_div">
 
+<div class="the_quarterly_text">THE QUARTERLY</div>
+<div class="the_quarterly_content"> THelaksdjf fbasldjbsdfjbs</div>
+<div class="the_quarterly_searchbar"></div>
+<div class="the_quarterly_subscribe_button"></div>
+
+	</div>
+
+<div>
+	</div>
 
 
 </body>
