Precautionary commit mid-work flow. Navbar details.

--- a/skinnytie.html
+++ b/skinnytie.html
@@ -24,43 +24,53 @@
 
 <!--  beginning of floated elements- floated in backward order from their placement in the navbar
  -->
- <div class="search-cart_div">
 
-    <div class="navbar_signin_searchbar">
+ 
+    <div class="search-cart_div">
+
+       <div class="navbar_signin_searchbar">
        <span class="navbar_signin_register_text">
-        SIGN IN  REGISTER</span>
+        SIGN IN REGISTER</span>
 	
 	   <div class="navbar_searchbar">
-		searchbar button</div>   
+		    <span class="sprite"></span>
+            <input class="searchbar" placeholder="Search..." /> </div>   
 	</div>
 	
-	<div class="navbar_shoppingcart"> Shopping cart here
+    <div class="navbar_shoppingcart"> <span class="sprite1"> </span> Cart
 	</div>
 
-</div>
+
+
+
+
+	</div>
+	
+
+
 
      <div class="skinnytielogo"> 
-     skinny ties logo here
+          <img src="/Users/r_l_fowlkes/ironyard/Projects/Skinny-ties-Mockup/imgs/logo-stack@2x.png" class="skinnytielogo_img">
  	</div>
-    <span class="navbutton_pattern">
+    <div class="navbutton_pattern">
  	Pattern
-    </span>
+    </div>
 
-    <span class="navbuttons">
+    <div class="navbuttons">
  	Fabric
-    </span>
+    </div>
 
-    <span class="navbuttons">
+    <div class="navbuttons">
  	Width
-    </span>
+    </div>
 
-    <span class="navbuttons">
+    <div class="navbuttons">
  	 Color
-    </span>
+    </div>
 
-    <span class="navbuttons">
+    <div class="navbuttons">
  	 Collection
-    </span>
+    </div>
 </div>
 
 <div class="tiebar_display_div">
