More progress fleshing out the finerdetails of the site

--- a/skinnytie.html
+++ b/skinnytie.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="./tiestyle.css">
+<link href='https://fonts.googleapis.com/css?family=Lato:400,300|Khula:400,300' rel='stylesheet' type='text/css'>
 	<title>Skinny Ties</title>
 </head>
 
@@ -29,15 +30,16 @@
     <div class="search-cart_div">
 
        <div class="navbar_signin_searchbar">
-       <span class="navbar_signin_register_text">
-        SIGN IN REGISTER</span>
-	
+       <span class="navbar_signin_text">
+        SIGN IN </span>
+	<span class="navbar_register_text">
+        REGISTER</span>
 	   <div class="navbar_searchbar">
 		    <span class="sprite"></span>
             <input class="searchbar" placeholder="Search..." /> </div>   
 	</div>
 	
-    <div class="navbar_shoppingcart"> <span class="sprite1"> </span> Cart
+    <div class="navbar_shoppingcart"> <span class="sprite1"> </span> <span class="cart_text"> Cart </span>
 	</div>
 
 
@@ -77,33 +79,56 @@
     <div class="tiestyle_img_div">
 	
 
-	    <img class="tiebar_tie_img" src="http://placecage.com/75/169">
-	    <img class="tiebar_tie_img" src="http://placecage.com/75/169">
-	    <img class="tiebar_tie_img" src="http://placecage.com/75/169">
-	    <img class="tiebar_tie_img" src="http://placecage.com/75/169">
-        </div>
- 
+	    <img class="tiebar_tie_img1" src="imgs/black@1.5x.jpg">
+	    <img class="tiebar_tie_img" src="imgs/blue@1.5x.jpg">
+	    <img class="tiebar_tie_img" src="imgs/collegiate@1.5x.jpg">
+	    <img class="tiebar_tie_img" src="imgs/cotton@1.5x.jpg">
+        <img class="tiebar_tie_img" src="imgs/favorites@1.5x.jpg">
+	    <img class="tiebar_tie_img" src="imgs/graphic@1.5x.jpg">
+	    <img class="tiebar_tie_img" src="imgs/plaid@1.5x.jpg">
+	    <img class="tiebar_tie_img" src="imgs/silk@1.5x.jpg">
+        <img class="tiebar_tie_img" src="imgs/striped@1.5x.jpg"></div>
+
+
+
+    <div class="tie_color_labels"> <span class="tiecolor_names1">Black</span> 
+                                   <span class="tiecolor_names">Blue</span>
+                                   <span class="tiecolor_names">Collegiate</span> 
+                                   <span class="tiecolor_names4">Cotton</span> 
+                                   <span class="tiecolor_names">Favorites</span> 
+                                   <span class="tiecolor_names">Graphic</span> 
+                                   <span class="tiecolor_names2">Plaid</span> 
+                                   <span class="tiecolor_names">Silk</span> 
+                                   <span class="tiecolor_names3">Striped</span> 
+
+    </div>
     <div class="startdressingbetter_div">
-	     Start Dressing Better
+	     Start dressing better.
 	     </div>
 </div>
+
+
+
+
+
+
 
 <div class="bow_squares_bars_div">
 
     <div class="bowties_div">
-<!-- 	    <img class="tiebar_tie_img" src="http://placecage.com/75/169">
- -->    <div class="bow_ties_text">BOW TIES</div>
+	    <img class="bowties_img" src="imgs/bow-ties.jpg">
+    <div class="bow_ties_text">BOW TIES</div>
     </div>
 
     <div class="pocketsquares_div">
-	<!-- 	    <img class="tiebar_tie_img" src="http://placecage.com/75/169">
- -->   
+		    <img class="pocket_squares_img" src="imgs/pocket-squares.jpg">
+   
 	    <div class="pocket_squares_text">Pocket squares</div>
     </div>	
 
     <div class="tiebars_div">
-	<!-- 	    <img class="tiebar_tie_img" src="http://placecage.com/75/169">
- -->   
+		    <img class="tiebar_img" src="imgs/tie-bars.jpg">
+   
 	    <div class="tie_bars_text"> Tie bars</div>
     </div>	
 </div>
