Adding more content to the mock up

--- a/skinnytie.html
+++ b/skinnytie.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="stylesheet" href="./tiestyle.css">
 <link href='https://fonts.googleapis.com/css?family=Lato:400,300|Khula:400,300' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Titillium+Web:700' rel='stylesheet' type='text/css'>	
 	<title>Skinny Ties</title>
 </head>
 
@@ -121,13 +122,13 @@
     </div>
 
     <div class="pocketsquares_div">
-		    <img class="pocket_squares_img" src="imgs/pocket-squares.jpg">
+		    <img class="pocket_squares_img" src="imgs/pocket-squares@1.5x.jpg">
    
 	    <div class="pocket_squares_text">Pocket squares</div>
     </div>	
 
     <div class="tiebars_div">
-		    <img class="tiebar_img" src="imgs/tie-bars.jpg">
+		    <img class="tiebar_img" src="imgs/tie-bars@1.5x.jpg">
    
 	    <div class="tie_bars_text"> Tie bars</div>
     </div>	
@@ -139,10 +140,10 @@
 
 <div class="view_our_history_div">
 
-    <div class="we_started_1971">We started in 1971 go fuck yourself</div>
-
+    <div class="we_started_1971">We started designing and selling neck ties in 1971.</div>
+<div class="after_years">After 44 years, we're still a family-owning and operated.</div>
     <div class="our_story">
-    	<a href="http://www.space.com/32964-china-moon-far-side-mission-science-goals.html">View our story</a>
+    	<a class="ourlink" href="http://www.space.com/32964-china-moon-far-side-mission-science-goals.html">View our story</a>
     </div>
 </div>
 
