Integrating the normalize stylesheetin the html

--- a/skinnytie.html
+++ b/skinnytie.html
@@ -2,8 +2,11 @@
 <html>
 <head>
 <link rel="stylesheet" href="./tiestyle.css">
+<link rel="stylesheet" href="./normalize.css">
 <link href='https://fonts.googleapis.com/css?family=Lato:400,300|Khula:400,300' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Titillium+Web:700' rel='stylesheet' type='text/css'>	
+<link href='https://fonts.googleapis.com/css?family=Titillium+Web:700' rel='stylesheet' type='text/css'>
+
+
 	<title>Skinny Ties</title>
 </head>
 
