Finished adding the content to the pre-footer bar and fixing the links in the footer bar

--- a/skinnytie.html
+++ b/skinnytie.html
@@ -161,9 +161,9 @@
 	
 	<span class="weekly_pick_text">WEEKLY PICK</span>
 	<div class="weekly_pick_img_div">
-			    <img class="weekly_pick_img" src="http://placecage.com/75/75"></div>
+			    <img class="weekly_pick_img" src="imgs/new.jpg"></div>
     <div class="weekly_pick_link">
-    	        <a href="http://www.space.com/32964-china-moon-far-side-mission-science-goals.html">View our story </a>
+    	        <a href="http://www.space.com/32964-china-moon-far-side-mission-science-goals.html">2"Blue,Black,Gray,Yellow and White Cotton Madras Skinny Tie </a>
     </div>
 
 </div>
@@ -176,8 +176,12 @@
 <div class="loop_us_in_div">
 	
 	<span class="loop_us_in_text">LOOP US IN</span>
-	<div class="loop_us_in_content">smallertext paragraph</div>
-    <div class="loop_us_in_sprites"> </div>
+	<div class="loop_us_in_content">Tightly knotted or hanging loose? Fitted suit or selvedge denim? Share your style with us.</div>
+    <div class="loop_us_in_sprites"> 
+    <span class="footer_sprite1"></span>
+    <span class="footer_sprite2"></span>
+    <span class="footer_sprite3"></span>
+    </div>
 
 </div>
 
@@ -190,27 +194,41 @@
 <div class="the_quarterly_div">
 
 <div class="the_quarterly_text">THE QUARTERLY</div>
-<div class="the_quarterly_content"> THelaksdjf fbasldjbsdfjbs</div>
-<div class="the_quarterly_searchbar"></div>
+<div class="the_quarterly_content">Our newsletter is simple and brief for the hard-pressed gentleman</div>
+<div class="the_quarterly_searchbar">
+
+            <input class="footer_searchbar" placeholder="name@example.com" /> </div>   
+            <input class="footer_subscribe_button" placeholder="Subscribe Me" /> </div>	
+
+
+
+
 <div class="the_quarterly_subscribe_button"></div>
-</div>
-
-
-
-
 
 
 
 <div class="style_guide_div">
 
 <div class="style_guide_text">THE STYLE GUIDE</div>
-<div class="style_guide_img_div"> <img class="style_guide_img" src="http://placecage.com/75/75"> </div>
+<div class="style_guide_img_div"> <img class="style_guide_img" src="imgs/style-guide@1.5x.jpg"> </div>
 <div class="style_guide_eightways">There are eight ways to <span><a href="http://www.space.com/32964-china-moon-far-side-mission-science-goals.html">Knot a tie. </a></span>
 
  </div>
 <div class="style_guide_theessentials"> We'll show you <span><a href="http://www.space.com/32964-china-moon-far-side-mission-science-goals.html"> the essentials </a></span> </div>
 
 </div>
+
+
+
+</div>
+
+
+
+
+
+
+
+
 
 </div>
 
