Finishing the final details of the mock up. Scallopped border, spacing, ect.

--- a/skinnytie.html
+++ b/skinnytie.html
@@ -21,6 +21,36 @@
     <span class="header_span5">$30 off $150 order!</span> 
 </div>
 
+
+
+
+<div class="scallop_border">
+
+
+
+
+    <img class="scallop_border1" src="imgs/perforated-bottom@2x.png">
+    <img class="scallop_border2" src="imgs/perforated-bottom@2x.png">
+    <img class="scallop_border3" src="imgs/perforated-bottom@2x.png">
+    <img class="scallop_border4" src="imgs/perforated-bottom@2x.png">
+    <img class="scallop_border5" src="imgs/perforated-bottom@2x.png">
+    <img class="scallop_border6" src="imgs/perforated-bottom@2x.png">
+    <img class="scallop_border7" src="imgs/perforated-bottom@2x.png">
+    <img class="scallop_border8" src="imgs/perforated-bottom@2x.png">
+    <img class="scallop_border9" src="imgs/perforated-bottom@2x.png">
+    <img class="scallop_border10" src="imgs/perforated-bottom@2x.png">
+    <img class="scallop_border11" src="imgs/perforated-bottom@2x.png">
+    <img class="scallop_border12" src="imgs/perforated-bottom@2x.png">
+    <img class="scallop_border13" src="imgs/perforated-bottom@2x.png">
+    <img class="scallop_border14" src="imgs/perforated-bottom@2x.png">
+    <img class="scallop_border15" src="imgs/perforated-bottom@2x.png">
+    <img class="scallop_border16" src="imgs/perforated-bottom@2x.png">
+    <img class="scallop_border17" src="imgs/perforated-bottom@2x.png">
+    <img class="scallop_border18" src="imgs/perforated-bottom@2x.png">
+    <img class="scallop_border19" src="imgs/perforated-bottom@2x.png">
+    <img class="scallop_border20" src="imgs/perforated-bottom@2x.png">
+    <img class="scallop_border21" src="imgs/perforated-bottom@2x.png">
+</div>
 <!-- Main Navbar container div
  -->
   <div class="mainnavbar">
@@ -219,6 +249,40 @@
 </div>
 
 
+<div class="2ndscallop_border">
+
+
+
+
+    <img class="fscallop_border1" src="imgs/perforated-bottom@2x.png">
+    <img class="fscallop_border2" src="imgs/perforated-bottom@2x.png">
+    <img class="fscallop_border3" src="imgs/perforated-bottom@2x.png">
+    <img class="fscallop_border4" src="imgs/perforated-bottom@2x.png">
+    <img class="fscallop_border5" src="imgs/perforated-bottom@2x.png">
+    <img class="fscallop_border6" src="imgs/perforated-bottom@2x.png">
+    <img class="fscallop_border7" src="imgs/perforated-bottom@2x.png">
+    <img class="fscallop_border8" src="imgs/perforated-bottom@2x.png">
+    <img class="fscallop_border9" src="imgs/perforated-bottom@2x.png">
+    <img class="fscallop_border10" src="imgs/perforated-bottom@2x.png">
+    <img class="fscallop_border11" src="imgs/perforated-bottom@2x.png">
+    <img class="fscallop_border12" src="imgs/perforated-bottom@2x.png">
+    <img class="fscallop_border13" src="imgs/perforated-bottom@2x.png">
+    <img class="fscallop_border14" src="imgs/perforated-bottom@2x.png">
+    <img class="fscallop_border15" src="imgs/perforated-bottom@2x.png">
+    <img class="fscallop_border16" src="imgs/perforated-bottom@2x.png">
+    <img class="fscallop_border17" src="imgs/perforated-bottom@2x.png">
+    <img class="fscallop_border18" src="imgs/perforated-bottom@2x.png">
+    <img class="fscallop_border19" src="imgs/perforated-bottom@2x.png">
+    <img class="fscallop_border20" src="imgs/perforated-bottom@2x.png">
+    <img class="fscallop_border21" src="imgs/perforated-bottom@2x.png">
+</div>
+
+
+
+
+
+
+
 
 </div>
 
@@ -309,9 +373,12 @@
         <div class="footerbar_contactus_div">
 
         <span class="contactus_here_for_you">We're here for you</span>
-        <span class="contactus_email">lalalalaal@gmail.com</span>
-        <span class="contactus_phone">(800)dail this number</span>
-        <div class="footerbar_contactus_botton">Contact Us</div>
+        <span class="contactus_email">help@skinnyties.com</span>
+        <div class="contactus_phone">877-687-4837</div>
+        <div class="footerbar_contactus_botton">
+
+
+        <input class="footer_contactus_input" placeholder="Contact Us" /> </div> </div>
         	
         </div>
 
@@ -320,7 +387,7 @@
 
 <div class="allrightsreserved">
 
-2015 Skinny ties all rights reserved. Made by gravity department</div>
+<span class="trademark_text"> 2015 Skinny ties all rights reserved. Made by gravity department</span>
 
 
 </div>
